# apollo-hdmap

./: .gitignore  CMakeLists.txt  setup.py
apollo_hdmap/: hdmap.py
proto/: map.proto  map_clear_area.proto  map_crosswalk.proto  map_geometry.proto  map_junction.proto  map_lane.proto  map_overlap.proto  map_parking_space.proto  map_pnc_junction.proto  map_road.proto  map_rsu.proto  map_signal.proto  map_speed_bump.proto  map_speed_control.proto  map_stop_sign.proto  map_yield_sign.proto  navigation.proto
src/: common_macros.h  common_status.h  config_gflags.cc  file.cc  file.h  hdmap.cc  hdmap.h  hdmap_common.cc  hdmap_common.h  hdmap_impl.cc  hdmap_impl.h  hdmap_util.cc  hdmap_util.h  log.h  util.h
src/adapter/: opendrive_adapter.cc  opendrive_adapter.h  proto_organizer.cc  proto_organizer.h
src/adapter/xml_parser/: common_define.h  coordinate_convert_tool.cc  coordinate_convert_tool.h  header_xml_parser.cc  header_xml_parser.h  junctions_xml_parser.cc  junctions_xml_parser.h  lanes_xml_parser.cc  lanes_xml_parser.h  objects_xml_parser.cc  objects_xml_parser.h  roads_xml_parser.cc  roads_xml_parser.h  signals_xml_parser.cc  signals_xml_parser.h  status.h  util_xml_parser.cc  util_xml_parser.h
src/math/: aabox2d.cc  aabox2d.h  aaboxkdtree2d.h  box2d.cc  box2d.h  line_segment2d.cc  line_segment2d.h  linear_interpolation.cc  linear_interpolation.h  math_utils.cc  math_utils.h  polygon2d.cc  polygon2d.h  vec2d.cc
src/nlohmann/: json.hpp
src/python/: py_map.cc  py_map.h
